# pixivDL

./: .gitignore  .impeccable.md  AGENTS.md  README.md  RELEASE_NOTES.md  pyproject.toml  rebuild PixivDL env.bat  test  修复系统环境.bat  启动 PixivDL.bat
.codex/skills/agent-collaboration-framework/: SKILL.md
.codex/skills/pixivdl-agent-collaboration/: SKILL.md
.github/workflows/: release.yml
backend/pixivdl/: __init__.py  auth.py  cache.py  config.py  database.py  downloads.py  main.py  pixiv.py  schemas.py  security.py
backend/tests/: test_auth.py  test_cache.py  test_database.py  test_downloads.py  test_pixiv.py  test_security.py
docs/: CODE_WIKI.md  agent-collaboration.md  agent-update-log.md
extension/: README.md  manifest.json  popup.css  popup.html  popup.js  rules.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css
scripts/: rebuild-env.ps1  repair-environment.ps1  run-api.ps1  run-frontend.ps1  start.ps1
